--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <java.version>21</java.version>
+	    <maven.compiler.target>17</maven.compiler.target>
         <kotlin.version>1.9.21</kotlin.version>
         <spring-cloud.version>2022.0.4</spring-cloud.version>
         <testcontainers.version>1.19.3</testcontainers.version>
